# freebox-remote

./: .gitmodules  CMakeLists.txt  README.md  build.sh
libelaqt/: CMakeLists.txt
libelaqt/include/elaqt/: elaqt.h
libelaqt/src/: elaqt.cpp
remote/: CMakeLists.txt  foilhid.cpp  foilhid.h  icons.qrc  main.cpp  main.qml
remote-cli/: CMakeLists.txt
remote-cli/src/: remote.c
